    to have zero-width, zero-height, and draw nothing.

    Useful as zero-size placeholder AND as invisible reference
    point for other grobs to draw relative to.

2.  Fixed bug in listing, via grid.ls(), of frame grobs.  If the frame
    had a vpPath in its 'vp' component, you got an error from vpStack().

    Problem reported by Hadley Wickham.


Changes from grid_2.6.0 to grid_2.7.0:
------------------------------------

1.  Grid will no longer complain about clipping to a rotated
    viewport if the rotation is a multiple of 90 degrees.

    Prompted by report from Gustaf Rydevik.

2.  Open Xsplines must have zero shape for first and last
    control point, but this was not being enforced correctly
    for the case where there were multiple Xsplines in a
    single grid.xspline() call (i.e., with use of 'id' or
    'id.length').  The problem can be seen with this code
    (most curves do not connect to the first control point
    [there are also subtle errors in the curve shapes]):

        grid.newpage()
        pushViewport(viewport(w=.5, h=.5))
        grid.xspline(x=outer(c(0, .5, 1, .5), 5:1/5),
                     s=1,
                     y=outer(c(.5, 1, .5, 0), 5:1/5),
                     id.lengths=rep(4, 5),
                     gp=gpar(col=1:5, lwd=3))
        grid.rect()

3.  Frame grobs have been improved so that all of the viewports
    that are generated during the drawing of a frame (and its
    cells) are left on the display list (previously, they were
    popped).

    This has implications particularly for ggplot[2] because
    it means that it is now possible to downViewport() to 
    viewports created during the drawing of a ggplot[2] plot
    to, for example, add further annotations to the plot.

4.  Small fixes to grid.ls():

    - viewports pushed by cellGrobs within frames are now
      shown by grid.ls()

    - fixed warning (bug really) when display list contains
      only one grob (and padPrefix() is called).

