@@ -1,13 +1,11 @@
 
-R version 2.6.0 Under development (unstable) (--)
-Copyright (C)  The R Foundation for Statistical Computing
+R version 2.8.0 Under development (unstable) (2008-07-28 r46138)
+Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
 Type 'license()' or 'licence()' for distribution details.
-
-  Natural language support but running in an English locale
 
 R is a collaborative project with many contributors.
 Type 'contributors()' for more information and
@@ -18,6 +16,18 @@ Type 'demo()' for some demos, 'help()' for on-line help, or
 Type 'q()' to quit R.
 
 > library(grid)
+> 
+> # Test hole in DL (deleted grob)
+> grid.lines(name="foo")
+> grid.lines(x=1:0, name="foo2")
+> grid.ls()
+foo
+foo2
+> grid.remove("foo")
+> grid.ls()
+foo2
+> # New blank page
+> grid.newpage()
 > 
 > 
 > #######
@@ -324,7 +334,6 @@ List of 6
  $ vpPath : chr [1:8] "" "" "vp1" "vp1::vp2" ...
  $ type   : chr [1:8] "gTreeListing" "vpTreeListing" "vpListing" "vpUpListing" ...
  - attr(*, "class")= chr "flatGridListing"
-> 
 > 
 > 
 > 
